<resources>
    <string name="app_name">SLIIT</string>
    <string name="home">About SLIIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_centers">Centers</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the marketing department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>

    <string name="chancellor_page_name">Prof. Lalith Gamage</string>
    <string name="chancellor_page_photos">Photos</string>
    <string name="chancellor_page_photos_value">125</string>
    <string name="chancellor_page_follwers">Followers</string>
    <string name="chancellor_page_followers_value">2508</string>
    <string name="chancellor_page_follwing">Following</string>
    <string name="chancellor_page_following_value">834</string>
    <string name="chancellor_page_email">lalith.g@sliit.lk</string>
    <string name="chancellor_page_phone">+94717313761</string>
    <string name="chancellor_page_group">Add to group</string>
    <string name="chancellor_page_messenger">Messenger</string>
    <string name="chancellor_page_button">Follow Me</string>

    <string name="splash_screen_developer">FSOCIETY2.0 Developers</string>

    <string name="malabe_center_name">Malabe Main Campus</string>
    <string name="malabe_center_student">Students</string>
    <string name="malabe_center_student_value">8000</string>
    <string name="malabe_center_academic">Academic Staff</string>
    <string name="malabe_center_academic_value">150</string>
    <string name="malabe_center_lab">Lab Facilities</string>
    <string name="malabe_center_lab_value">20</string>
    <string name="malabe_center_email">info@sliit.lk</string>
    <string name="malabe_center_phone">+94(0)11 241 3900</string>
    <string name="malabe_center_address">SLIIT Malabe Campus,New Kandy Road,Malabe.</string>
    <string name="malabe_center_facilities">Software design and development Division \nResearch and development incubator \nSLIIT Research Centre</string>

    <string name="metro_center_name">Metro Center</string>
    <string name="metro_center_student">Students</string>
    <string name="metro_center_student_value">1500</string>
    <string name="metro_center_academic">Academic Staff</string>
    <string name="metro_center_academic_value">30</string>
    <string name="metro_center_lab">Lab Facilities</string>
    <string name="metro_center_lab_value">5</string>
    <string name="metro_center_email">info@sliit.lk</string>
    <string name="metro_center_phone">+94(0)11 230 1904</string>
    <string name="metro_center_address">SLIIT Metropolitan Campus,BoC Merchant Tower# 28, St Michael’s Road,Colombo 03.</string>
    <string name="metro_center_facilities">Study and Research Center with Foreign Degree Programs</string>

    <string name="matara_center_name">Matara Center</string>
    <string name="matara_center_student">Students</string>
    <string name="matara_center_student_value">200</string>
    <string name="matara_center_academic">Academic Staff</string>
    <string name="matara_center_academic_value">15</string>
    <string name="matara_center_lab">Lab Facilities</string>
    <string name="matara_center_lab_value">2</string>
    <string name="matara_center_email">infomatara@sliit.lk</string>
    <string name="matara_center_phone">+94(0)41 222 2958</string>
    <string name="matara_center_address">SLIIT Matara Centre,No. 24, E.H.Cooray Building, AnagarikaDharmapalaMawatha, Matara.</string>
    <string name="matara_center_facilities">Study only</string>

    <string name="content_main_name">Sri Lanka Institute of Information Technology</string>
    <string name="content_main_desc">We are a leading non-state degree awarding institute approved by the University Grants Commission under the Universities Act. We are a member of the Association of Commonwealth Universities.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="header_view_layout_name">Name</string>
    <string name="header_view_layout_position">Position</string>
</resources>
