<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight"
    android:orientation="vertical"
 >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/malabe"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malabe_center_name"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="15sp"/>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="245dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malabe_center_student"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malabe_center_student_value"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingTop="10dp"
                        android:textColor="@color/startblue"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malabe_center_academic"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malabe_center_academic_value"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingTop="10dp"
                        android:textColor="@color/startblue"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malabe_center_lab"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malabe_center_lab_value"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingTop="10dp"
                        android:textColor="@color/startblue"
                        />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/malabe_center_email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_phone_android_black_24dp"/>
            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/malabe_center_phone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_location_city_black_24dp"/>
            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/malabe_center_address"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_forum_black_24dp"/>
            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/malabe_center_facilities"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>